# torch-vulkan

./: .gitignore  CMakeLists.txt  pyproject.toml
src/torch_vulkan/: __init__.py
src/torch_vulkan/_C/: CMakeLists.txt  device.cpp  device.h  torch_vulkan.cpp
src/torch_vulkan/_C/ops/: add.cpp  add.h  mm.cpp  mm.h
src/torch_vulkan/shaders/: add.comp  mm.comp
tests/: test_basic.py
